# monkeypox-api

./: Dockerfile  README.md  example_use.ipynb  monkeypox_analysis.R  monkeypox_analysis.ipynb  pyproject.toml  requirements.txt
api/: monkeypox_api.py
api/scraper/: scrape.py
src/api/: main.py  monkeypox_api.py
src/scraper/: main.py
