[project]
name = "monkeypox-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "fastapi>=0.115.8",
    "html5lib>=1.1",
    "httpx>=0.28.1",
    "jupyterlab>=4.3.5",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "uvicorn>=0.34.0",
]
